exp/lighthorizon/build/k8s/lighthorizon_index.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    fluxcd.io/ignore: "true"
  labels:
    app: lighthorizon-pubnet-index
  name: lighthorizon-pubnet-index
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lighthorizon-pubnet-index
  template:
    metadata:
      annotations:
        fluxcd.io/ignore: "true"
        prometheus.io/port: "6060"
        prometheus.io/scrape: "false"
      creationTimestamp: null
      labels:
        app: lighthorizon-pubnet-index
    spec:
      containers:
      - envFrom:
        - secretRef:
            name: lighthorizon-pubnet-index-secret
        - configMapRef:
            name: lighthorizon-pubnet-index-env
        image: stellar/lighthorizon-index-single:latest
        imagePullPolicy: Always
        name: index
        ports:
        - containerPort: 6060
          name: metrics
          protocol: TCP
        resources:
          limits:
            cpu: 3
            memory: 6Gi
          requests:
            cpu: 500m
            memory: 1Gi
